# AOPI_LR8

./: .gitignore  1.tur  CMakeLists.txt  Otchet.docx  Task.txt  buildLR.sh
alg/: 2.tur  3.tur  ThatShouldDoIt.tur
src/: funcs.c  funcs.h  main.c
